Thu Feb 15 11:33:55 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Thread_Manager.i (get_next): Added an ACE_const_cast() to
	  make certain compilers happy.

	* ace/Logging_Strategy.cpp: Fixed some Unicode problems on Win32.

Thu Feb 15 08:49:44 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/nightlybuilds/builds.lst:
          Rename WashU builds so all the Debian builds appear together.

Thu Feb 15 07:15:39 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/Logging_Strategy.{h,cpp}: Added support to generate multiple
          log files, rather than just two.  Thanks to Orlando Ribeiro
          <oribeiro@inescporto.pt> for this fix.

Thu Feb 15 03:36:46 2001  Krishnakumar B  <kitty@cs.wustl.edu>

        * bin/nightlybuilds/builds.lst (WEB):
        Added a new build with TAO_MINIMUM linked statically.

Wed Feb 14 05:28:59 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/Thread_Manager.{h,i}: Added const to state(), grp_id(),
          task(), get_next(), and self().  Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for reporting this.

Tue Feb 13 17:51:47 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * tests/Makefile.bor (TESTS): Added Dirent_Test to list of TESTS.
          Thanks to Mike Curtis for reporting this.

        * tests/run_tests.bat: Fixed a typo so that Dirent_Test will run.
          Thanks to Mike Curtis for reporting this.

Wed Feb 14 12:08:10 2001  Frank Hunleth  <fhunleth@cs.wustl.edu>

        * ace/Read_Buffer.cpp: Fixed boundary condition in rec_read.
          If record was a multiple of BUFSIZ and the record was
          terminated with an EOF instead of a "term" character,
          rec_read would return 0 instead of the actual data read in.
          The problem was that the partial buffer fill size was being
          checked instead of the total number of bytes read in.  This
          issue was noticed when trying to read in an IOR file in TAO